@@ -31,6 +31,7 @@
 - Fix refresh of monitoring configuration {pull}23619[23619]
 - Fixed nil pointer during unenroll {pull}23609[23609]
 - Fixed reenroll scenario {pull}23686[23686]
+- Fixed Monitoring filebeat and metricbeat not connecting to Agent over GRPC {pull}23843[23843]
 
 ==== New features
 
